--- a/views/index.html
+++ b/views/index.html
@@ -3,16 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <title>Elliott Wagner</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Elliott Wagner" />
+    <link rel="icon" href="/images/icon.png">
     <link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
 <body>
+<div id="mainHeadingDiv">
 <h1>What side of Elliott do you want to see?</h1>
+</div>
 <div id="btnDiv">
-    <a href="it.html">
-        <button id="itBtn" >IT</button>
+    <a href="/it">
+        <button id="itBtn" class="btn-76" >IT</button>
     </a>
-    <a href="announcing.html">
-        <button id="announcerBtn">Announcer</button>
+    <a href="/announcing">
+        <button id="announcerBtn" class="btn-76">Announcer</button>
     </a>
 </div>
 </body>
