--- a/views/it.html
+++ b/views/it.html
@@ -2,9 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Elliott Wagner" />
+    <link rel="icon" href="/images/icon.png">
+    <link rel="stylesheet" type="text/css" href="/css/it.css">
     <title>IT</title>
 </head>
 <body>
-
+    <h1>IT</h1>
 </body>
 </html>
