--- a/views/announcing.html
+++ b/views/announcing.html
@@ -2,9 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Elliott Wagner" />
+    <link rel="icon" href="/images/icon.png">
+    <link rel="stylesheet" type="text/css" href="/css/announcing.css">
     <title>Announcing</title>
 </head>
 <body>
-
+    <div id="announcingHeadingDiv">
+        <h1>Announcing</h1>
+    </div>
 </body>
 </html>
