--- a/views/announcing.html
+++ b/views/announcing.html
@@ -6,11 +6,19 @@
     <meta name="author" content="Elliott Wagner" />
     <link rel="icon" href="/images/icon.png">
     <link rel="stylesheet" type="text/css" href="/css/announcing.css">
+    <script src="https://kit.fontawesome.com/dcc0625c67.js" crossorigin="anonymous"></script>
     <title>Announcing</title>
 </head>
 <body>
     <div id="announcingHeadingDiv">
         <h1>Announcing</h1>
     </div>
+    <i class="fa-sharp-duotone fa-solid fa-circle-half-stroke" onclick="myFunction()" id="switchbtn"></i>
+<script>
+    function myFunction() {
+        let element = document.body;
+        element.classList.toggle("light");
+    }
+</script>
 </body>
 </html>
