--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,8 +7,68 @@ body {
     overflow: hidden;
     margin: 0;
     background-color: black;
+    color: #fff;
+    transition: background-color 0.3s, color 0.3s;
 }
- h1{
+.light {
+    background-color: white;
+    color: black;
+    h1{
+        color: black;
+        font-size: 50px;
+        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+        text-shadow: black 0px 0px 2px;
+    }
+    .btn-76 {
+        -webkit-tap-highlight-color: transparent;
+        -webkit-appearance: button;
+        background-color: #fff;
+        background-image: none;
+        color: #000;
+        cursor: pointer;
+        font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
+        Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif,
+        Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
+        font-size: 100%;
+        line-height: 1.5;
+        margin: 40px;
+        padding: 0;
+        border-radius: 35px;
+
+    }
+    #itBtn.btn-76 {
+        --neon: #0000ff;
+        box-sizing: border-box;
+        display: block;
+        font-weight: 900;
+        -webkit-mask-image: none;
+        outline: 4px solid #000;
+        outline-offset: -4px;
+        overflow: hidden;
+        padding: 1.2rem 3rem;
+        position: relative;
+        text-transform: uppercase;
+        transition: 0.2s linear 0s;
+        text-decoration: none;
+    }
+    #announcerBtn.btn-76 {
+        --neon: #ff0000;
+        box-sizing: border-box;
+        display: block;
+        font-weight: 900;
+        -webkit-mask-image: none;
+        outline: 4px solid #000;
+        outline-offset: -4px;
+        overflow: hidden;
+        padding: 1.2rem 3rem;
+        position: relative;
+        text-transform: uppercase;
+        transition: 0.2s linear 0s;
+        text-decoration: none;
+    }
+}
+
+h1{
     color: white;
     font-size: 50px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -18,6 +78,7 @@ body {
 a {
     text-decoration: none;
 }
+
 div#btnDiv {
     display: flex;
     justify-content: center;
@@ -80,7 +141,7 @@ button:hover ~ body {
     padding: 1.2rem 3rem;
     position: relative;
     text-transform: uppercase;
-    transition: 0.2s linear 0s;
+    transition: 0.3s linear 0s;
     text-decoration: none;
 }
 #announcerBtn.btn-76 {
@@ -95,7 +156,7 @@ button:hover ~ body {
     padding: 1.2rem 3rem;
     position: relative;
     text-transform: uppercase;
-    transition: 0.2s linear 0s;
+    transition: 0.3s linear 0s;
     text-decoration: none;
 }
 #announcerBtn.btn-76:hover {
@@ -110,7 +171,7 @@ button:hover ~ body {
     0 0 100px var(--neon);
     color: #fff;
     outline-color: transparent;
-    transition: 0.2s linear 0s;
+    transition: 0.3s linear 0s;
     text-decoration: none;
 }
 .btn-76 span {
@@ -127,7 +188,7 @@ button:hover ~ body {
 .btn-76:hover .top {
     --progress: 100%;
     opacity: 1;
-    transition: transform 0.2s linear 0s;
+    transition: transform 0.3s linear 0s;
 }
 .btn-76 .right {
     border-right: 4px solid var(--neon);
@@ -138,7 +199,7 @@ button:hover ~ body {
 .btn-76:hover .right {
     --progress: 100%;
     opacity: 1;
-    transition: transform 0.2s linear 0s;
+    transition: transform 0.3s linear 0s;
 }
 .btn-76 .bottom {
     border-bottom: 4px solid var(--neon);
@@ -149,7 +210,7 @@ button:hover ~ body {
 .btn-76:hover .bottom {
     --progress: 100%;
     opacity: 1;
-    transition: transform 0.2s linear 0s;
+    transition: transform 0.3s linear 0s;
 }
 .btn-76 .left {
     border-left: 4px solid var(--neon);
@@ -160,7 +221,7 @@ button:hover ~ body {
 .btn-76:hover .left {
     --progress: 100%;
     opacity: 1;
-    transition: transform 0.2s linear 0s;
+    transition: transform 0.3s linear 0s;
 }
 /* Styles for screens smaller than 768px */
 @media (max-width: 768px) {
@@ -178,4 +239,15 @@ button:hover ~ body {
     .btn-76 {
         padding: 1rem 2rem;  /* Adjust padding for smaller buttons */
     }
+}
+#switchbtn {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    margin: 20px;
+    z-index: 1000;
+    cursor: pointer;
+    font-size: 35px;
+    width: 50px;
+    height: 50px;
 }
