--- a/views/it.html
+++ b/views/it.html
@@ -10,11 +10,16 @@
     <title>IT</title>
 </head>
 <body>
-    <h1>IT</h1>
 <nav id="itNav">
+    <h1 id="title">IT</h1>
     <ul>
-        <li><a href="/it/tech">Tech</a></li>
-        <li><a href="/it/non-tech">Non-Tech</a></li>
+        <li><a>Overview</a></li>
+        <li><a>Strengths and Weaknesses</a></li>
+        <li><a href="https://github.com/si1ent-306" target="_blank">GitHub</a></li>
+        <li><a>Experiences</a></li>
+        <li><a>Education</a></li>
+        <li><a>Personal Projects</a></li>
+        <li><a>Other</a></li>
     </ul>
 </nav>
     <i class="fa-sharp-duotone fa-solid fa-circle-half-stroke" onclick="myFunction()" id="switchbtn"></i>
