--- a/public/css/it.css
+++ b/public/css/it.css
@@ -1,19 +1,50 @@
 body {
-    padding: 25px;
     background-color: black;
     color: white;
     font-size: 25px;
     transition: background-color 0.3s, color 0.3s;
     display: grid;
-    grid-template-rows: 1fr auto;
-    grid-template-columns: auto 1fr;
+    grid-template-columns: 150px 1fr;
+    grid-template-rows: 1fr;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+}
+#itNav {
+    grid-column-start: 1;
+    grid-row-start: 1;
+    padding: 20px;
+    height: 100vh;
+    width: 150px;
+    display: flex;
+    flex-direction: column;
+    box-shadow: 0 0 30px #0000ff;
+}
 
+#itNav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    flex-grow: 1;
+}
+
+#itNav li {
+    margin-bottom: 10px;
+}
+
+#itNav a {
+    color: #fff;
+    text-decoration: none;
 }
 h1{
-    color: white;
     font-size: 50px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    text-shadow: white 0px 0px 5px;
+    grid-column-start: 2;
+    grid-row-start: 1;
+    margin: 20px;
+    color: #fff;
+    text-shadow: 0 0 30px #0000ff;
+    text-align: center;
 }
 nav{
     height: 100vh;
@@ -25,9 +56,9 @@ nav{
     grid-column-end: 3;
 }
 nav li, nav a {
-    display: inline-block;
-    margin: 10px;
-    padding: 10px;
+    display: block;
+    margin: 10px 0;
+    padding: 10px 0;
     text-decoration: none;
     list-style-type: none;
     list-style-image: none;
@@ -35,7 +66,6 @@ nav li, nav a {
     font-size: 25px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-shadow: white 0px 0px 5px;
-    padding: 10px;
 }
 .light {
     background-color: white;
@@ -44,8 +74,27 @@ nav li, nav a {
         color: black;
         font-size: 50px;
         font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+        text-shadow: #0000ff 0px 0px 30px;
+    }
+    nav li, nav a {
+        color: black;
+        display: block;
+        margin: 10px 0;
+        padding: 10px 0;
+        text-decoration: none;
+        list-style-type: none;
+        list-style-image: none;
+        font-size: 25px;
+        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
         text-shadow: black 0px 0px 2px;
     }
+}
+.light #itNav a {
+    color: #000;
+}
+
+.light #itNav li {
+    color: #000;
 }
 #switchbtn {
     position: absolute;
