--- a/views/index.html
+++ b/views/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>Elliott Wagner</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="author" content="Elliott Wagner" />
+    <meta name="author" content="Elliott Wagner (and AI)" />
+    <meta name="description" content="Elliott Wagner's website that shows off his IT and Announcing side.">
     <link rel="icon" href="/images/icon.png">
     <link rel="stylesheet" type="text/css" href="/css/style.css">
     <script src="https://kit.fontawesome.com/dcc0625c67.js" crossorigin="anonymous"></script>
@@ -15,7 +16,7 @@
 </div>
 <div id="btnDiv">
     <a href="/it">
-        <button id="itBtn" class="btn-76" >IT</button>
+        <button id="itBtn" class="btn-76" >Programmer</button>
     </a>
     <a href="/announcing">
         <button id="announcerBtn" class="btn-76">Announcer</button>
