--- a/views/it.html
+++ b/views/it.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="author" content="Elliott Wagner" />
+    <meta name="author" content="Elliott Wagner (and AI)" />
+    <meta name="description" content="Elliott Wagner's website that shows off his IT and Announcing side.">
     <link rel="icon" href="/images/icon.png">
     <link rel="stylesheet" type="text/css" href="/css/it.css">
     <script src="https://kit.fontawesome.com/dcc0625c67.js" crossorigin="anonymous"></script>
@@ -11,24 +12,28 @@
 </head>
 <body>
 <nav id="itNav">
-    <h1 id="title">IT</h1>
+    <h1 id="title"><a href="/"></a>Programmer</h1>
     <ul>
-        <li><a>Overview</a></li>
-        <li><a>Strengths and Weaknesses</a></li>
+        <li><a href="/it/overview">Overview</a></li>
+        <li><a href="/it/strengths-and-weaknesses">Strengths and Weaknesses</a></li>
         <li><a href="https://github.com/si1ent-306" target="_blank">GitHub</a></li>
-        <li><a>Experiences</a></li>
-        <li><a>Education</a></li>
-        <li><a>Personal Projects</a></li>
-        <li><a>Other</a></li>
+        <li><a href="/it/experiences">Experiences</a></li>
+        <li><a href="/it/education">Education</a></li>
+        <li><a href="/it/personal-projects">Personal Projects</a></li>
+        <li><a href="/it/other">Other</a></li>
+        <li><a href="/">Back to Home</a></li>
     </ul>
 </nav>
-    <i class="fa-sharp-duotone fa-solid fa-circle-half-stroke" onclick="myFunction()" id="switchbtn"></i>
+<article>
+    <h1>Elliott Wagner</h1>
+    <p>Welcome to my IT page!</p>
+</article>
+<i class="fa-sharp-duotone fa-solid fa-circle-half-stroke" onclick="myFunction()" id="switchbtn"></i>
 <script>
     function myFunction() {
         let element = document.body;
         element.classList.toggle("light");
     }
-
 </script>
 </body>
 </html>
