--- a/public/css/it.css
+++ b/public/css/it.css
@@ -1,26 +1,48 @@
+/* Global styles */
+/* Global styles */
 body {
     background-color: black;
     color: white;
     font-size: 25px;
     transition: background-color 0.3s, color 0.3s;
     display: grid;
-    grid-template-columns: 150px 1fr;
-    grid-template-rows: 1fr;
+    grid-template-columns: auto 1fr;
     margin: 0;
     padding: 0;
     overflow: hidden;
 }
+
+
+/* Navigation styles */
 #itNav {
-    grid-column-start: 1;
+    /* Set the grid column start to 1 and the grid row start to 1 */
+    grid-column-start: 2;
     grid-row-start: 1;
+    /* Add padding and set the height and width */
     padding: 20px;
     height: 100vh;
-    width: 150px;
+    width: auto;
+    /* Set the display to flex and flex direction to column */
     display: flex;
     flex-direction: column;
-    box-shadow: 0 0 30px #0000ff;
+    /* Add a box shadow */
+    box-shadow: 0 0 90px #0000ff;
 }
 
+
+/* Navigation styles */
+#itNav {
+    grid-column: 1;
+    grid-row: 1;
+    padding: 20px;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    box-shadow: 0 0 90px #0000ff;
+    width: auto;
+}
+
+/* Navigation list styles */
 #itNav ul {
     list-style-type: none;
     margin: 0;
@@ -28,54 +50,90 @@ body {
     flex-grow: 1;
 }
 
-#itNav li {
-    margin-bottom: 10px;
-}
-
+/* Navigation link styles */
 #itNav a {
     color: #fff;
     text-decoration: none;
 }
-h1{
+
+
+/* Header styles */
+/* Header styles */
+h1 {
     font-size: 50px;
+    font-family: 'Trebuchet MS', sans-serif;
+    text-shadow: 0 0 30px #0000ff;
+    margin: 20px;
+    text-align: center;
+    cursor: pointer;
+}
+
+/* Article styles */
+article {
+    grid-column: 2;
+    grid-row: 1;
+    margin: 20px;
+    text-align: center;
+    font-size: 25px;
+}
+p{
+    /* Set the font size to 25px */
+    font-size: 25px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    /* Set the grid column start to 2 and the grid row start to 1 */
     grid-column-start: 2;
     grid-row-start: 1;
+    /* Add margin and center the text */
     margin: 20px;
-    color: #fff;
-    text-shadow: 0 0 30px #0000ff;
     text-align: center;
 }
+
+/* Navigation styles */
 nav{
+    /* Set the height to 100vh and hide the overflow */
     height: 100vh;
     overflow: hidden;
     margin: 0;
+    /* Set the display to flex and flex direction to column */
     display: flex;
     text-decoration: none;
+    /* Set the grid column start to 1 and the grid column end to 3 */
     grid-column-start: 1;
     grid-column-end: 3;
 }
+
+/* Navigation list item and link styles */
 nav li, nav a {
+    /* Set the display to block and add margin and padding */
     display: block;
     margin: 10px 0;
     padding: 10px 0;
     text-decoration: none;
+    /* Remove the list style type and add a text shadow */
     list-style-type: none;
     list-style-image: none;
     color: white;
     font-size: 25px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-shadow: white 0px 0px 5px;
+    /* Add a cursor pointer */
+    cursor: pointer;
 }
+
+
+/* Light mode styles */
 .light {
+    /* Set the background color to white and the text color to black */
     background-color: white;
     color: black;
+    /* Set the header text color to black and add a text shadow */
     h1{
         color: black;
         font-size: 50px;
         font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
         text-shadow: #0000ff 0px 0px 30px;
     }
+    /* Set the navigation list item and link styles */
     nav li, nav a {
         color: black;
         display: block;
@@ -89,6 +147,8 @@ nav li, nav a {
         text-shadow: black 0px 0px 2px;
     }
 }
+
+/* Light mode navigation styles */
 .light #itNav a {
     color: #000;
 }
@@ -96,6 +156,8 @@ nav li, nav a {
 .light #itNav li {
     color: #000;
 }
+
+/* Switch button styles */
 #switchbtn {
     position: absolute;
     bottom: 0;
