--- a/views/index.html
+++ b/views/index.html
@@ -15,7 +15,7 @@
 <h1>What side of Elliott do you want to see?</h1>
 </div>
 <div id="btnDiv">
-    <a href="/it">
+    <a href="/programming">
         <button id="itBtn" class="btn-76" >Programmer</button>
     </a>
     <a href="/announcing">
