--- a/views/programming/programming.html
+++ b/views/programming/programming.html
@@ -6,22 +6,22 @@
     <meta name="author" content="Elliott Wagner (and AI)" />
     <meta name="description" content="Elliott Wagner's website that shows off his IT and Announcing side.">
     <link rel="icon" href="/images/icon.png">
-    <link rel="stylesheet" type="text/css" href="/css/it.css">
+    <link rel="stylesheet" type="text/css" href="/css/programming.css">
     <script src="https://kit.fontawesome.com/dcc0625c67.js" crossorigin="anonymous"></script>
     <title>IT</title>
 </head>
 <body>
 <nav id="itNav">
-    <h1 id="title"><a href="/"></a>Programmer</h1>
+    <h1 id="title"><a href="/public"></a>Programmer</h1>
     <ul>
-        <li><a href="/it/overview">Overview</a></li>
-        <li><a href="/it/strengths-and-weaknesses">Strengths and Weaknesses</a></li>
+        <li><a href="/programming/overview">Overview</a></li>
+        <li><a href="/programming/strengths-and-weaknesses">Strengths and Weaknesses</a></li>
         <li><a href="https://github.com/si1ent-306" target="_blank">GitHub</a></li>
-        <li><a href="/it/experiences">Experiences</a></li>
-        <li><a href="/it/education">Education</a></li>
-        <li><a href="/it/personal-projects">Personal Projects</a></li>
-        <li><a href="/it/other">Other</a></li>
-        <li><a href="/">Back to Home</a></li>
+        <li><a href="/programming/experiences">Experiences</a></li>
+        <li><a href="/programming/education">Education</a></li>
+        <li><a href="/programming/personal-projects">Personal Projects</a></li>
+        <li><a href="/programming/other">Other</a></li>
+        <li><a href="/public">Back to Home</a></li>
     </ul>
 </nav>
 <article>
