--- a/views/announcing/education.html
+++ b/views/announcing/education.html
@@ -17,13 +17,13 @@
 </head>
 <body>
 <nav id="announcingNav">
-    <h1 id="title"><a href="/"></a>Announcing</h1>
+    <h1 id="title"><a href="/public"></a>Announcing</h1>
     <ul>
         <li><a href="/announcing/overview">Overview</a></li>
         <li><a href="/announcing/strengths-and-weaknesses">Strengths and Weaknesses</a></li>
-        <li><a href="https://github.com/si1ent-306" target="_blank">Past Experiences</a></li>
+        <li><a href="/announcing/experiences">Past Experiences</a></li>
         <li><a href="/announcing/experiences">Teams/Venues</a></li>
-        <li><a href="/announcing/education">Education</a></li>
+        <li><a href="/views/announcing/education.html">Education</a></li>
         <li><a href="/announcing/personal-projects">Highlights</a></li>
         <li><a href="/announcing/other">Other</a></li>
         <li><a href="/">Back to Home</a></li>
@@ -33,7 +33,7 @@
     <h1>Elliott Wagner</h1>
     <p>Welcome to the Announcing page!</p>
 </article>
-    <i class="fa-sharp-duotone fa-solid fa-circle-half-stroke" onclick="myFunction()" id="switchbtn"></i>
+<i class="fa-sharp-duotone fa-solid fa-circle-half-stroke" onclick="myFunction()" id="switchbtn"></i>
 <script>
     function myFunction() {
         let element = document.body;
