--- a/views/programming/personal-projects.html
+++ b/views/programming/personal-projects.html
@@ -8,7 +8,7 @@
   <link rel="icon" href="/images/icon.png">
   <link rel="stylesheet" type="text/css" href="/css/programming.css">
   <script src="https://kit.fontawesome.com/dcc0625c67.js" crossorigin="anonymous"></script>
-  <title>IT</title>
+  <title>Programming</title>
 </head>
 <body>
 <nav id="itNav">
