--- a/views/programming/programming.html
+++ b/views/programming/programming.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="/images/icon.png">
     <link rel="stylesheet" type="text/css" href="/css/programming.css">
     <script src="https://kit.fontawesome.com/dcc0625c67.js" crossorigin="anonymous"></script>
-    <title>IT</title>
+    <title>Programming</title>
 </head>
 <body>
 <nav id="itNav">
@@ -26,7 +26,7 @@
 </nav>
 <article>
     <h1>Elliott Wagner</h1>
-    <p>Welcome to my IT page!</p>
+    <p>Welcome to my Programing page!</p>
 </article>
 <i class="fa-sharp-duotone fa-solid fa-circle-half-stroke" onclick="myFunction()" id="switchbtn"></i>
 <script>
