--- a/views/announcing/strengths-and-weaknesses.html
+++ b/views/announcing/strengths-and-weaknesses.html
@@ -21,16 +21,16 @@
   <ul>
     <li><a href="/announcing/overview">Overview</a></li>
     <li><a href="/announcing/strengths-and-weaknesses">Strengths and Weaknesses</a></li>
-    <li><a href="/experiences">Past Experiences</a></li>
-    <li><a href="/announcing/experiences">Teams/Venues</a></li>
+    <li><a href="/announcing/experiences">Past Experiences</a></li>
+    <li><a href="/announcing/teamsandvenues">Teams/Venues</a></li>
     <li><a href="/announcing/education">Education</a></li>
-    <li><a href="/announcing/personal-projects">Highlights</a></li>
+    <li><a href="/announcing/highlights">Highlights</a></li>
     <li><a href="/announcing/other">Other</a></li>
-    <li><a href="/">Back to Home</a></li>
+    <li><a href="/public">Back to Home</a></li>
   </ul>
 </nav>
 <article>
-  <h1>Elliott Wagner</h1>
+  <h1>Strengths and Weaknesses</h1>
   <p>Welcome to the Announcing page!</p>
 </article>
 <i class="fa-sharp-duotone fa-solid fa-circle-half-stroke" onclick="myFunction()" id="switchbtn"></i>
