--- a/views/announcing/announcing.html
+++ b/views/announcing/announcing.html
@@ -8,8 +8,6 @@
     <meta name="keywords" content="Elliott Wagner, IT, Announcing, Regina, Saskatchewan">
     <meta name="theme-color" content="#000000">
     <meta name="generator" content="WebStorm">
-    <meta name=”geo.region” content=”CAN-SK” />
-    <meta name=”geo.placename” content=”Regina” />
     <link rel="icon" href="/images/icon.png">
     <link rel="stylesheet" type="text/css" href="/css/announcing.css">
     <script src="https://kit.fontawesome.com/dcc0625c67.js" crossorigin="anonymous"></script>
@@ -17,7 +15,7 @@
 </head>
 <body>
 <nav id="announcingNav">
-    <h1 id="title"><a href="/public"></a>Announcing</h1>
+    <h1 id="title"><a href="/announcing/announcing"></a>Announcing</h1>
     <ul>
         <li><a href="/announcing/overview">Overview</a></li>
         <li><a href="/announcing/strengths-and-weaknesses">Strengths and Weaknesses</a></li>
