--- a/views/announcing/education.html
+++ b/views/announcing/education.html
@@ -22,16 +22,16 @@
         <li><a href="/announcing/overview">Overview</a></li>
         <li><a href="/announcing/strengths-and-weaknesses">Strengths and Weaknesses</a></li>
         <li><a href="/announcing/experiences">Past Experiences</a></li>
-        <li><a href="/announcing/experiences">Teams/Venues</a></li>
-        <li><a href="/views/announcing/education.html">Education</a></li>
-        <li><a href="/announcing/personal-projects">Highlights</a></li>
+        <li><a href="/announcing/teamsandvenues">Teams/Venues</a></li>
+        <li><a href="/announcing/education">Education</a></li>
+        <li><a href="/announcing/highlights">Highlights</a></li>
         <li><a href="/announcing/other">Other</a></li>
-        <li><a href="/">Back to Home</a></li>
+        <li><a href="/public">Back to Home</a></li>
     </ul>
 </nav>
 <article>
-    <h1>Elliott Wagner</h1>
-    <p>Welcome to the Announcing page!</p>
+    <h1>Education</h1>
+    <p>Welcome to the Education page!</p>
 </article>
 <i class="fa-sharp-duotone fa-solid fa-circle-half-stroke" onclick="myFunction()" id="switchbtn"></i>
 <script>
