--- a/views/announcing/announcing.html
+++ b/views/announcing/announcing.html
@@ -24,12 +24,13 @@
         <li><a href="/announcing/education">Education</a></li>
         <li><a href="/announcing/highlights">Highlights</a></li>
         <li><a href="/announcing/other">Other</a></li>
-        <li><a href="/">Back to Home</a></li>
+        <li><a href="../">Back to Home</a></li>
     </ul>
 </nav>
 <article>
     <h1>Elliott Wagner</h1>
     <p>Welcome to the Announcing page!</p>
+
 </article>
     <i class="fa-sharp-duotone fa-solid fa-circle-half-stroke" onclick="myFunction()" id="switchbtn"></i>
 <script>
