--- a/views/announcing/education.html
+++ b/views/announcing/education.html
@@ -32,6 +32,14 @@
 <article>
     <h1>Education</h1>
     <p>Welcome to the Education page!</p>
+    <div class="contentDiv">
+        <p>Here are some of the schools I have attended:</p>
+        <ul>
+            <li>Regina High School</li>
+            <li>Regina Academy</li>
+        </ul>
+    </div>
+
 </article>
 <i class="fa-sharp-duotone fa-solid fa-circle-half-stroke" onclick="myFunction()" id="switchbtn"></i>
 <script>
