--- a/views/announcing/experiences.html
+++ b/views/announcing/experiences.html
@@ -31,7 +31,24 @@
 </nav>
 <article>
   <h1>Experiences</h1>
-  <p>Welcome to the Announcing page!</p>
+  <p>Welcome to the experiences page!</p>
+  <div class="contentDiv">
+    <p style="text-decoration: underline; font-size: 1.5em"  >Here are some of the events that I have announced for:</p>
+    <ul>
+      <li>RHSAA Basketball Season (2019, 2021-2022)</li>
+      <li>The ROCK Basketball Tournament (2019, 2021-2022)</li>
+      <li>WCBL Regular Season/Playoffs (2022 -2024)</li>
+      <li>Canadian Junior Little League Championship (2022-2023)</li>
+      <li>ACAC Volleyball Season (2022/2023)</li>
+      <li>ACAC Basketball Season (2022/2023)</li>
+      <li>Regina Minor Football Regular Season (2023-2024)</li>
+      <li>WWCFL Season/Playoffs/Championship (2023-2024)</li>
+      <li>PFC Regular Season (2023-2024)</li>
+      <li>PFC Semi-Final (2023)</li>
+      <li>CJFL Semi Final (2024)</li>
+      <li>... And many more to come</li>
+    </ul>
+  </div>
 </article>
 <i class="fa-sharp-duotone fa-solid fa-circle-half-stroke" onclick="myFunction()" id="switchbtn"></i>
 <script>
