--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,6 +9,18 @@ body {
     background-color: black;
     color: #fff;
     transition: background-color 0.3s, color 0.3s;
+    animation: fadeInAnimation ease 2s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+}
+@keyframes fadeInAnimation {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
 }
 .light {
     background-color: white;
