--- a/views/announcing/experiences.html
+++ b/views/announcing/experiences.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 <nav id="announcingNav">
-  <h1 id="title"><a href="/public"></a>Announcing</h1>
+  <h1 ><a id="title" href="/announcing">Announcing</a></h1>
   <ul>
     <li><a href="/announcing/overview">Overview</a></li>
     <li><a href="/announcing/strengths-and-weaknesses">Strengths and Weaknesses</a></li>
@@ -26,7 +26,7 @@
     <li><a href="/announcing/education">Education</a></li>
     <li><a href="/announcing/highlights">Highlights</a></li>
     <li><a href="/announcing/other">Other</a></li>
-    <li><a href="/public">Back to Home</a></li>
+    <li><a href="../">Back to Home</a></li>
   </ul>
 </nav>
 <article>
