--- a/public/css/announcing.css
+++ b/public/css/announcing.css
@@ -1,10 +1,4 @@
-/* 
-  Styles for the Announcing page
-*/
-
-/* 
-  Body styles
-*/
+/* Global styles */
 @keyframes fadeInAnimation {
     0% {
         opacity: 0;
@@ -18,51 +12,64 @@ body {
     animation: fadeInAnimation ease 0.5s;
     animation-iteration-count: 1;
     animation-fill-mode: forwards;
-    height: auto;
-    /* 
-      Set the background color to black and the text color to white
-    */
     background-color: black;
     color: white;
-
-    /* 
-      Set the font size to 25px and add a transition effect
-    */
-    font-size: 1.5rem;
+    font-size: 25px;
     transition: background-color 0.3s, color 0.3s;
-
-    /* 
-      Set the display to grid and define the grid template columns and rows
-    */
     display: grid;
     grid-template-columns: 1fr auto;
-    grid-template-rows: 1fr;
-
-    /* 
-      Set the margin and padding to 0 and hide the overflow
-    */
     margin: 0;
     padding: 0;
+    overflow: hidden;
 }
-body ul{
+
+
+
+/* Navigation styles */
+#announcingNav {
+    grid-column: 2;
+    grid-row: 1;
+    padding: 20px;
+    height: 100vh;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    gap: 20px;
-    margin: 0 auto;
-    align-content: center;
+    flex-direction: column;
+    box-shadow: 0 0 90px #ff0000;
+    width: auto;
 }
-body ul li, a{
+
+/* Navigation list styles */
+#announcingNav ul {
     list-style-type: none;
-    list-style-image: none;
-    margin: 10px 0;
-    padding: 10px 0;
+    margin: 0;
+    padding: 0;
+    flex-grow: 0;
+}
+
+/* Navigation link styles */
+#announcingNav a {
+    color: #fff;
     text-decoration: none;
-    color: white;
-    font-size: 25px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    text-shadow: white 0px 0px 5px;
+    margin-bottom: 5px;
+}
+
+
+/* Header styles */
+h1 {
+    font-size: 50px;
+    font-family: 'Trebuchet MS', sans-serif;
+    text-shadow: 0 0 30px #ff0000;
+    margin: 20px;
+    text-align: center;
     cursor: pointer;
+}
+
+/* Article styles */
+article {
+    grid-column: 1;
+    grid-row: 1;
+    margin: 20px;
+    text-align: center;
+    font-size: 25px;
 }
 p{
     /* Set the font size to 25px */
@@ -76,204 +83,52 @@ p{
     text-align: center;
 }
 
-/* 
-  Navigation styles
-*/
-#announcingNav {
-    /* 
-      Set the grid column start to 2 and the grid row start to 1
-    */
-    grid-column-start: 2;
-    grid-row-start: 1;
-
-    /* 
-      Add padding and set the height and width
-    */
-    padding: 20px;
-    height: 100vh;
-    width: auto;
-
-
-    /* 
-      Set the display to flex and add a box shadow
-    */
-    display: flex;
-    flex-direction: column;
-    box-shadow: 0 0 90px #ff0000;
-}
-
-/* 
-  List styles
-*/
-#announcingNav ul {
-    /* 
-      Set the list style type to none and remove the margin and padding
-    */
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-
-    /* 
-      Set the flex grow to 1
-    */
-    flex-grow: 1;
-
-}
-
-/* 
-  List item styles
-*/
-#announcingNav li {
-    /* 
-      Add margin to the bottom of each list item
-    */
-    margin-bottom: 10px;
-}
-
-/* 
-  Link styles
-*/
-#announcingNav a {
-    /* 
-      Set the color to white and remove the text decoration
-    */
-    color: #fff;
-    text-decoration: none;
-    margin-bottom: 5px;
-}
-
-/* 
-  Header styles
-*/
-h1, #title{
-    /*
-      Set the font size to 50px and add a text shadow
-    */
-    font-size: 50px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    text-shadow: 0 0 30px #ff0000;
-
-    /*
-      Set the grid column start to 1 and the grid row start to 1
-    */
-    grid-column-start: 1;
-    grid-row-start: 1;
-
-    /*
-      Add margin and center the text
-    */
-    margin: 20px;
-    text-align: center;
-    cursor: pointer;
-}
-.contentDiv{
-    /*
-      Add margin and center the text
-    */
-    margin: 20px;
-    text-align: left;
-    font-size: 25px;
-    margin-left: 0;
-    margin-right: auto;
-    color: #fff;
-    float: left;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    box-shadow: red 0px 0px 30px;
-    ul{
-        list-style-type: none;
-        margin: 10px;
-        text-shadow: 0 0 30px #ffffff;
-    }
-    li{
-        margin: 10px;
-        padding: 5px;
-        text-shadow: 0 0 30px #ffffff;
-    }
-
-}
-/* 
-  Navigation styles
-*/
+/* Navigation styles */
 nav{
-    /* 
-      Set the height to 100vh and hide the overflow
-    */
-    height: auto;
+    /* Set the height to 100vh and hide the overflow */
+    height: 100vh;
     overflow: hidden;
-
-    /* 
-      Set the margin to 0 and add a display of flex
-    */
     margin: 0;
+    /* Set the display to flex and flex direction to column */
     display: flex;
-    padding-bottom: 0px;
-
-    /* 
-      Remove the text decoration and set the grid column start to 2
-    */
     text-decoration: none;
-    grid-column-start: 2;
-    grid-column-end: 2;
+    /* Set the grid column start to 1 and the grid column end to 3 */
+    grid-column-start: 1;
+    grid-column-end: 3;
 }
 
-
-/* 
-  List item styles
-*/
+/* Navigation list item and link styles */
 nav li, nav a {
-    /* 
-      Set the display to block and add margin and padding
-    */
+    /* Set the display to block and add margin and padding */
     display: block;
     margin: 10px 0;
     padding: 10px 0;
-
-    text-align: right;
-    /* 
-      Remove the text decoration and list style type
-    */
     text-decoration: none;
+    /* Remove the list style type and add a text shadow */
     list-style-type: none;
     list-style-image: none;
-
-    /* 
-      Set the color to white and add a text shadow
-    */
     color: white;
     font-size: 25px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-shadow: white 0px 0px 5px;
-
-    /* 
-      Set the cursor to pointer
-    */
+    /* Add a cursor pointer */
     cursor: pointer;
 }
 
 
-/* 
-  Light theme styles
-*/
+/* Light mode styles */
 .light {
-    /* 
-      Set the background color to white and the text color to black
-    */
+    /* Set the background color to white and the text color to black */
     background-color: white;
     color: black;
-
-    /* 
-      Set the header styles
-    */
+    /* Set the header text color to black and add a text shadow */
     h1{
         color: black;
         font-size: 50px;
         font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
         text-shadow: #ff0000 0px 0px 30px;
     }
-
-    /* 
-      Set the list item styles
-    */
+    /* Set the navigation list item and link styles */
     nav li, nav a {
         color: black;
         display: block;
@@ -286,46 +141,26 @@ nav li, nav a {
         font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
         text-shadow: black 0px 0px 2px;
     }
-    p, li {
-        color: black;
-        text-shadow: black 0px 0px 2px;
-    }
 }
 
-/* 
-  Light theme styles for navigation
-*/
-.light #announcingNav a {
+/* Light mode navigation styles */
+.light #itNav a {
     color: #000;
 }
 
-.light #announcingNav li {
+.light #itNav li {
     color: #000;
 }
 
-/* 
-  Switch button styles
-*/
+/* Switch button styles */
 #switchbtn {
-    /*
-      Set the position to absolute and add a margin
-    */
-    position: fixed;
-    bottom: 1px;
-    left: 5px;
+    position: absolute;
+    bottom: 0;
+    right: 0;
     margin: 20px;
-
-    /* 
-      Set the z-index to 1000 and add a cursor
-    */
     z-index: 1000;
     cursor: pointer;
-
-    /* 
-      Set the font size to 35px and the width and height to 50px
-    */
     font-size: 35px;
     width: 50px;
     height: 50px;
-
 }
