--- a/views/announcing/announcing.html
+++ b/views/announcing/announcing.html
@@ -14,19 +14,22 @@
     <title>Announcing</title>
 </head>
 <body>
-<article>
-    <h1>Elliott Wagner</h1>
-    <p>Welcome to the Announcing page!</p>
+<nav id="announcingNav">
+    <h1 id="title"><a href="/public"></a>Announcer</h1>
     <ul>
         <li><a href="/announcing/overview">Overview</a></li>
         <li><a href="/announcing/strengths-and-weaknesses">Strengths and Weaknesses</a></li>
+        <li><a href="https://linkedin.com/in/elliott-wagner" target="_blank">LinkedIn</a></li>
         <li><a href="/announcing/experiences">Past Experiences</a></li>
         <li><a href="/announcing/teamsandvenues">Teams/Venues</a></li>
-        <li><a href="/announcing/education">Education</a></li>
         <li><a href="/announcing/highlights">Highlights</a></li>
         <li><a href="/announcing/other">Other</a></li>
         <li><a href="../">Back to Home</a></li>
     </ul>
+</nav>
+<article>
+    <h1>Elliott Wagner</h1>
+    <p>Welcome to my Programing page!</p>
 </article>
     <i class="fa-sharp-duotone fa-solid fa-circle-half-stroke" onclick="myFunction()" id="switchbtn"></i>
 <script>
