--- a/views/announcing/announcing.html
+++ b/views/announcing/announcing.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="author" content="Elliott Wagner (and AI)" />
+    <meta name="author" content="Elliott Wagner (and AI ngl)" />
     <meta name="description" content="Elliott Wagner's website that shows off his IT and Announcing side.">
     <meta name="keywords" content="Elliott Wagner, IT, Announcing, Regina, Saskatchewan">
     <meta name="theme-color" content="#000000">
