--- a/views/announcing/experiences.html
+++ b/views/announcing/experiences.html
@@ -17,13 +17,13 @@
 </head>
 <body>
 <nav id="announcingNav">
-  <h1 ><a id="title" href="/announcing">Announcing</a></h1>
+  <h1 id="title"><a href="/public"></a>Announcer</h1>
   <ul>
     <li><a href="/announcing/overview">Overview</a></li>
     <li><a href="/announcing/strengths-and-weaknesses">Strengths and Weaknesses</a></li>
+    <li><a href="https://linkedin.com/in/elliott-wagner" target="_blank">LinkedIn</a></li>
     <li><a href="/announcing/experiences">Past Experiences</a></li>
     <li><a href="/announcing/teamsandvenues">Teams/Venues</a></li>
-    <li><a href="/announcing/education">Education</a></li>
     <li><a href="/announcing/highlights">Highlights</a></li>
     <li><a href="/announcing/other">Other</a></li>
     <li><a href="../">Back to Home</a></li>
@@ -46,6 +46,9 @@
       <li>PFC Regular Season (2023-2024)</li>
       <li>PFC Semi-Final (2023)</li>
       <li>CJFL Semi Final (2024)</li>
+      <li>Sask Football Senior Bowl (2024)</li>
+      <li>Football Canada U16 Western Challenge (2023,2024)</li>
+      <li>Football Canada U18 Canada Cup (2024)</li>
       <li>... And many more to come</li>
     </ul>
   </div>
