--- a/views/announcing/overview.html
+++ b/views/announcing/overview.html
@@ -17,13 +17,13 @@
 </head>
 <body>
 <nav id="announcingNav">
-  <h1 ><a id="title" href="/announcing">Announcing</a></h1>
+  <h1 id="title"><a href="/public"></a>Announcer</h1>
   <ul>
     <li><a href="/announcing/overview">Overview</a></li>
     <li><a href="/announcing/strengths-and-weaknesses">Strengths and Weaknesses</a></li>
+    <li><a href="https://linkedin.com/in/elliott-wagner" target="_blank">LinkedIn</a></li>
     <li><a href="/announcing/experiences">Past Experiences</a></li>
     <li><a href="/announcing/teamsandvenues">Teams/Venues</a></li>
-    <li><a href="/announcing/education">Education</a></li>
     <li><a href="/announcing/highlights">Highlights</a></li>
     <li><a href="/announcing/other">Other</a></li>
     <li><a href="../">Back to Home</a></li>
