--- a/views/programming/strengths-and-weaknesses.html
+++ b/views/programming/strengths-and-weaknesses.html
@@ -21,7 +21,7 @@
     <li><a href="/programming/education">Education</a></li>
     <li><a href="/programming/personal-projects">Personal Projects</a></li>
     <li><a href="/programming/other">Other</a></li>
-    <li><a href="/public">Back to Home</a></li>
+    <li><a href="../">Back to Home</a></li>
   </ul>
 </nav>
 <article>
