--- a/views/programming/other.html
+++ b/views/programming/other.html
@@ -26,7 +26,16 @@
 </nav>
 <article>
   <h1>Other</h1>
-  <p>Welcome to my IT page!</p>
+  <div class="contentDiv">
+    <p>Here are some of my other links</p>
+    <ul>
+      <li><a href="https://www.linkedin.com/in/elliott-wagner" target="_blank">LinkedIn</a></li>
+      <li><a href="https://www.w3profile.com/si1ent306" target="_blank">W3Schools</a></li>
+      <li><a href="https://leetcode.com/u/si1ent306/" target="_blank">Leetcode</a></li>
+      <li><a href="https://www.freecodecamp.org/si1ent306" target="_blank">FreeCodeCamp</a></li>
+      <li> <a href="https://www.geeksforgeeks.org/user/elliottwacrz8/" target="_blank">GeeksForGeeks</a></li>
+    </ul>
+  </div>
 </article>
 <i class="fa-sharp-duotone fa-solid fa-circle-half-stroke" onclick="myFunction()" id="switchbtn"></i>
 <script>
