--- a/views/programming/education.html
+++ b/views/programming/education.html
@@ -27,6 +27,24 @@
 <article>
   <h1>Education</h1>
   <p>Welcome to my IT page!</p>
+  <div class="contentDiv">
+    <p>Here are some of the schools I have attended:</p>
+    <ul>
+      <li>Regina Christian School (2018-2022) - High School Diploma</li>
+        <li>Here I leaned things like:</li>
+        <ul class="with-dot">
+          <li class="with-dot">Math</li>
+          <li class="with-dot">Science</li>
+          <li class="with-dot">English</li>
+          <li class="with-dot">French</li>
+          <li class="with-dot">Spanish</li>
+          <li class="with-dot">German</li>
+      </ul>
+      <li>Briercrest Bible College (2022-2023) - Certificate of Biblical Studies</li>
+      <li>Saskatchewan Polytechnic (2023-2025) - Diploma in Computer Systems Technology</li>
+    </ul>
+  </div>
+
 </article>
 <i class="fa-sharp-duotone fa-solid fa-circle-half-stroke" onclick="myFunction()" id="switchbtn"></i>
 <script>
