--- a/views/programming/other.html
+++ b/views/programming/other.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <nav id="itNav">
-  <h1 id="title"><a href="/public"></a>Programmer</h1>
+  <h1 id="title"><a href="/programming/">Programmer</a></h1>
   <ul>
     <li><a href="/programming/overview">Overview</a></li>
     <li><a href="/programming/strengths-and-weaknesses">Strengths and Weaknesses</a></li>
