--- a/views/programming/education.html
+++ b/views/programming/education.html
@@ -26,7 +26,7 @@
 </nav>
 <article>
   <h1>Education</h1>
-  <p>Welcome to my IT page!</p>
+  <h3>This page will display and explain the information I have learned through my academic career</h3>
   <div class="contentDiv">
     <p>Here are some of the schools I have attended:</p>
     <ul>
@@ -36,12 +36,28 @@
           <li class="with-dot">Math</li>
           <li class="with-dot">Science</li>
           <li class="with-dot">English</li>
-          <li class="with-dot">French</li>
-          <li class="with-dot">Spanish</li>
-          <li class="with-dot">German</li>
-      </ul>
+          <li class="with-dot">Early web development</li>
+          <li class="with-dot">Managing extra curricular</li>
+          <li class="with-dot">Writing</li>
+        </ul>
       <li>Briercrest Bible College (2022-2023) - Certificate of Biblical Studies</li>
+      <ul class="with-dot">
+        <li class="with-dot">Math</li>
+        <li class="with-dot">Science</li>
+        <li class="with-dot">English</li>
+        <li class="with-dot">Early web development</li>
+        <li class="with-dot">Managing extra curricular</li>
+        <li class="with-dot">Writing</li>
+      </ul>
       <li>Saskatchewan Polytechnic (2023-2025) - Diploma in Computer Systems Technology</li>
+      <ul class="with-dot">
+        <li class="with-dot">Math</li>
+        <li class="with-dot">Science</li>
+        <li class="with-dot">English</li>
+        <li class="with-dot">Early web development</li>
+        <li class="with-dot">Managing extra curricular</li>
+        <li class="with-dot">Writing</li>
+      </ul>
     </ul>
   </div>
 
