--- a/views/programming/other.html
+++ b/views/programming/other.html
@@ -26,8 +26,9 @@
 </nav>
 <article>
   <h1>Other</h1>
+  <h3>Here are some of my other links</h3>
   <div class="contentDiv">
-    <p>Here are some of my other links</p>
+
     <ul>
       <li><a href="https://www.linkedin.com/in/elliott-wagner" target="_blank">LinkedIn</a></li>
       <li><a href="https://www.w3profile.com/si1ent306" target="_blank">W3Schools</a></li>
