--- a/views/programming/overview.html
+++ b/views/programming/overview.html
@@ -26,7 +26,7 @@
 </nav>
 <article>
     <h1>Overview</h1>
-    <p>Welcome to my IT page!</p>
+    <h3>A general explanation of Elliott Wagner as a person</h3>
 </article>
 <i class="fa-sharp-duotone fa-solid fa-circle-half-stroke" onclick="myFunction()" id="switchbtn"></i>
 <script>
