--- a/views/programming/personal-projects.html
+++ b/views/programming/personal-projects.html
@@ -26,7 +26,7 @@
 </nav>
 <article>
   <h1>Personal Projects</h1>
-  <p>Welcome to my IT page!</p>
+  <h3>This page will showcase the projects I have done on a personal level</h3>
 </article>
 <i class="fa-sharp-duotone fa-solid fa-circle-half-stroke" onclick="myFunction()" id="switchbtn"></i>
 <script>
