--- a/views/programming/programming.html
+++ b/views/programming/programming.html
@@ -26,7 +26,11 @@
 </nav>
 <article>
     <h1>Elliott Wagner</h1>
-    <p>Welcome to my Programing page!</p>
+    <h3>Welcome to my Programing page!</h3>
+    <div class="contentDiv">
+        Welcome to my programming page. This website will consist of displaying my skills, weakenesses, expereinces and and overall explenation of my programming ability.
+
+    </div>
 </article>
 <i class="fa-sharp-duotone fa-solid fa-circle-half-stroke" onclick="myFunction()" id="switchbtn"></i>
 <script>
