--- a/views/programming/strengths-and-weaknesses.html
+++ b/views/programming/strengths-and-weaknesses.html
@@ -26,7 +26,7 @@
 </nav>
 <article>
   <h1>Welcome to My Programming World</h1>
-  <p>Explore my journey in IT, including my skills, experiences, and personal projects. Dive into the different aspects of my professional life and discover the strengths and weaknesses I have encountered along the way. Feel free to explore the links provided for more detailed information on each topic.</p>
+  <h3>This will give more of a specific look at my programming ability, both in my strengths and weaknesses</h3>
 </article>
 <i class="fa-sharp-duotone fa-solid fa-circle-half-stroke" onclick="myFunction()" id="switchbtn"></i>
 <script>
