--- a/views/programming/experiences.html
+++ b/views/programming/experiences.html
@@ -26,7 +26,7 @@
 </nav>
 <article>
   <h1>Experiences</h1>
-  <p>Welcome to my IT page!</p>
+  <h3>This page describes my experiences including group projects and more</h3>
 </article>
 <i class="fa-sharp-duotone fa-solid fa-circle-half-stroke" onclick="myFunction()" id="switchbtn"></i>
 <script>
