--- a/views/programming/education.html
+++ b/views/programming/education.html
@@ -30,7 +30,7 @@
   <div class="contentDiv">
     <p>Here are some of the schools I have attended:</p>
     <ul>
-      <li>Regina Christian School (2018-2022) - High School Diploma</li>
+      <li style="text-decoration: underline">Regina Christian School (2018-2022) - High School Diploma</li>
         <li>Here I leaned things like:</li>
         <ul class="with-dot">
           <li class="with-dot">Math</li>
@@ -40,23 +40,23 @@
           <li class="with-dot">Managing extra curricular</li>
           <li class="with-dot">Writing</li>
         </ul>
-      <li>Briercrest Bible College (2022-2023) - Certificate of Biblical Studies</li>
+      <li style="text-decoration: underline">Briercrest Bible College (2022-2023) - Certificate of Biblical Studies</li>
+      <li>Here I leaned things like:</li>
       <ul class="with-dot">
-        <li class="with-dot">Math</li>
-        <li class="with-dot">Science</li>
-        <li class="with-dot">English</li>
-        <li class="with-dot">Early web development</li>
-        <li class="with-dot">Managing extra curricular</li>
-        <li class="with-dot">Writing</li>
+        <li class="with-dot">Social Skills/Communication</li>
+        <li class="with-dot">Load/Time Management</li>
+        <li class="with-dot">How to live on my own</li>
+        <li class="with-dot">Office 365 and Python</li>
       </ul>
-      <li>Saskatchewan Polytechnic (2023-2025) - Diploma in Computer Systems Technology</li>
+      <li style="text-decoration: underline">Saskatchewan Polytechnic (2023-2025) - Diploma in Computer Systems Technology</li>
+      <li>Here I leaned things like:</li>
       <ul class="with-dot">
-        <li class="with-dot">Math</li>
-        <li class="with-dot">Science</li>
-        <li class="with-dot">English</li>
-        <li class="with-dot">Early web development</li>
-        <li class="with-dot">Managing extra curricular</li>
-        <li class="with-dot">Writing</li>
+        <li class="with-dot">Java</li>
+        <li class="with-dot">Web Development (HTML, CSS, JS, NodeJS, Basic React, MongoDB)</li>
+        <li class="with-dot">C</li>
+        <li class="with-dot">Operating System Managment (Windows 10/11/Server, Azure, Entra, Linux)</li>
+        <li class="with-dot">Cyber Security</li>
+        <li class="with-dot">Networking Basics</li>
       </ul>
     </ul>
   </div>
