--- a/views/programming/experiences.html
+++ b/views/programming/experiences.html
@@ -27,6 +27,7 @@
 <article>
   <h1>Experiences</h1>
   <h3>This page describes my experiences including group projects and more</h3>
+  <!--TODO: THIS PAGE -->
 </article>
 <i class="fa-sharp-duotone fa-solid fa-circle-half-stroke" onclick="myFunction()" id="switchbtn"></i>
 <script>
