--- a/views/programming/personal-projects.html
+++ b/views/programming/personal-projects.html
@@ -27,6 +27,7 @@
 <article>
   <h1>Personal Projects</h1>
   <h3>This page will showcase the projects I have done on a personal level</h3>
+  <!--TODO: THIS PAGE -->
 </article>
 <i class="fa-sharp-duotone fa-solid fa-circle-half-stroke" onclick="myFunction()" id="switchbtn"></i>
 <script>
