--- a/views/programming/programming.html
+++ b/views/programming/programming.html
@@ -29,7 +29,7 @@
     <h3>Welcome to my Programing page!</h3>
     <div class="contentDiv">
         Welcome to my programming page. This website will consist of displaying my skills, weakenesses, expereinces and and overall explenation of my programming ability.
-
+        <!--TODO: THIS PAGE -->
     </div>
 </article>
 <i class="fa-sharp-duotone fa-solid fa-circle-half-stroke" onclick="myFunction()" id="switchbtn"></i>
