--- a/views/programming/strengths-and-weaknesses.html
+++ b/views/programming/strengths-and-weaknesses.html
@@ -27,6 +27,7 @@
 <article>
   <h1>Welcome to My Programming World</h1>
   <h3>This will give more of a specific look at my programming ability, both in my strengths and weaknesses</h3>
+  <!--TODO: THIS PAGE -->
 </article>
 <i class="fa-sharp-duotone fa-solid fa-circle-half-stroke" onclick="myFunction()" id="switchbtn"></i>
 <script>
